--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.16.0
   firebase_auth: ^4.10.0
+  firebase_database: ^10.2.6
+  cloud_firestore: ^4.9.2
 
 dev_dependencies:
   flutter_test:
